--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-then-sigint": "node dev-then-sigint.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
