--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "dev-then-sigint": "node dev-then-sigint.mjs",
     "build": "next build",
+    "build-content": "content-collections build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@content-collections/cli": "^0.1.6",
     "@content-collections/core": "^0.8.0",
     "@content-collections/next": "^0.2.4",
     "next": "15.1.7",
